--- a/try_node/package.json
+++ b/try_node/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.23.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
-    "prompt": "^1.2.0"
+    "prompt": "^1.2.0",
+    "socket.io": "^4.3.2"
   }
 }
