--- a/try_node/package.json
+++ b/try_node/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node app.js",
+    "dev":"nodemon app.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.23.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.1",
+    "express-session": "^1.17.2",
     "mongodb": "^4.1.3",
+    "nodemon": "^2.0.15",
     "prompt": "^1.2.0",
     "socket.io": "^4.3.2"
   }
