--- a/try_node_socket/package.json
+++ b/try_node_socket/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "try_node",
+  "name": "try_node_socket",
   "version": "1.0.0",
-  "description": "",
+  "description": "try to do a real time message page",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,16 +9,12 @@
     "dev": "nodemon app.js"
   },
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.23.0",
-    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "express-handlebars": "^6.0.1",
+    "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
-    "mongodb": "^4.1.3",
     "nodemon": "^2.0.15",
-    "prompt": "^1.2.0",
     "socket.io": "^4.4.0"
   }
 }
