--- a/try_node/package.json
+++ b/try_node/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
     "express-session": "^1.17.2",
     "mongodb": "^4.1.3",
     "nodemon": "^2.0.15",
     "prompt": "^1.2.0",
+    "redis": "^4.0.3",
     "socket.io": "^4.4.0"
   }
 }
